--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,13 +39,14 @@
 				<div class="row">
 				<div id="main_main" class="sub_main col-xs-12 col-lg-8">
 				<% else %>
-				<%= render :partial => 'layouts/page_header' %>
+				<%= render 'layouts/page_header' %>
 				<div class="row">
 				<div class="sub_main col-xs-12 col-lg-8">
 				<% end %>
+				<%= render 'layouts/ad' %>
 				<%=yield %>
 				</div>
-				<%= render :partial => 'layouts/aside' %>
+				<%= render 'layouts/aside' %>
 			</div>
 		</div>
 	</section>
