--- a/app/views/layouts/_ad.html.erb
+++ b/app/views/layouts/_ad.html.erb
@@ -11,8 +11,9 @@
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 <% else %>
+<!--
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- default_ad -->
+default_ad
 <ins class="adsbygoogle"
      style="display:block"
      data-ad-client="ca-pub-5400903051441488"
@@ -20,6 +21,6 @@
      data-ad-format="auto"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+</script> -->
 <% end %>
 </div>
