수정함:        app/assets/stylesheets/application.scss 	수정함:        app/controllers/programs_controller.rb 	수정함:        app/models/program.rb 	수정함:        app/models/program_categories_program.rb 	수정함:        app/models/program_link.rb 	수정함:        app/views/programs/index.html.erb 	수정함:        config/locales/ko.yml 	수정함:        db/migrate/20161216002146_create_program_categories.rb 	수정함:        db/migrate/20161216002148_create_programs.rb 	삭제함:        db/migrate/20161216002149_create_program_links.rb 	삭제함:        db/migrate/20161216002150_create_program_categories_programs.rb 	수정함:        db/seeds.rb

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -137,8 +137,7 @@ footer form {position:absolute;top:10px;right:10px}
 #sl_blog_index ol.nav-tabs {margin:0 0 10px}
 #sl_blog {float:left;width:100%;margin:20px 0}
 #sl_blog_index .media {border-bottom:1px dotted #ccc;padding-bottom:10px;margin-bottom:20px}
-#sl_blog_index .media .tags a {color:#999 }
-#sl_blog_index .media .tags a:hover {color:#333}
+#sl_blog_index .media .tags {display:none}
 
 
 /* Main Common*/
@@ -382,6 +381,10 @@ a.left:active {background-position: -60px 0}
   .container {width:1500px}
   .jumbotron {text-align: center}
 
+
+  #sl_blog_index .media .tags {display:block}
+  #sl_blog_index .media .tags a {color:#999 }
+  #sl_blog_index .media .tags a:hover {color:#333}
 
   .hidden-lg {
       display: none !important;
