--- a/app/views/galleries/index.html.erb
+++ b/app/views/galleries/index.html.erb
@@ -1,4 +1,4 @@
 <% breadcrumb :galleries %>
-<div id="sl_gallery_index">
+<div id="sl_gallery_index" class="sl_gallery">
 	<%= render 'gallery' %>
 </div>
