--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -1,4 +1,4 @@
 <% breadcrumb :gallery, @gallery %>
-<div id="sl_gallery_show">
+<div id="sl_gallery_show" class="sl_gallery">
   <%= render 'gallery' %>
 </div>
