--- a/app/views/layouts/_ad.html.erb
+++ b/app/views/layouts/_ad.html.erb
@@ -11,16 +11,6 @@
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 <% else %>
-<!--
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-default_ad
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-5400903051441488"
-     data-ad-slot="8412654331"
-     data-ad-format="auto"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script> -->
+<div style="width:100%;padding-top:30%;background:red">&nbsp;</div>
 <% end %>
 </div>
