--- a/app/views/galleries/_index.html.erb
+++ b/app/views/galleries/_index.html.erb
@@ -33,7 +33,10 @@
 	<% end %>
 
 	<!-- Controls -->
+	<% if @galleries.count > 6 %>
 	<a class="left carousel-control" href="#sl_main_gallery" role="button" data-slide="prev"> <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> <span class="sr-only">Previous</span> </a>
 	<a class="right carousel-control" href="#sl_main_gallery" role="button" data-slide="next"> <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span> <span class="sr-only">Next</span> </a>
+	<% end %>
+
 	<%= link_to t(:link_more),galleries_path,:class=>'more' %>
 </article>
