--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
 <body itemscope itemtype="<%=@page_itemtype %>">
 	<%= render :partial => 'layouts/header' %>
 	<div id="mom">
-		<section id="main" class="container">
+		<div id="main" class="container">
 				<% if current_page?(root_path) %>
 				<div class="jumbotron hero-unit">
 					<h2><%=raw t(:home_main_title) %></h2>
@@ -49,7 +49,7 @@
 				<%= render 'layouts/aside' %>
 			</div>
 		</div>
-	</section>
+	</div>
 	<%= render :partial => 'layouts/footer' %>
 	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
 	<%= javascript_include_tag @script, "data-turbolinks-track" => true %>
