--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -31,11 +31,10 @@
 		<%= f.text_field :title, :class=>'form-control', :required=>'required' %>
 	</div>
 </div>
-<div class="form-group">
-	<%= f.label :secret, :class=>'col-sm-2 control-label' %>
-	<div class="col-sm-10">
-		<%= f.check_box :secret, :class=>'form-control' %>
-	</div>
+<div class="col-sm-offset-2 col-sm-10 checkbox">
+				<label>
+		<%= f.check_box :secret %> <%=t(:secret) %>
+	</label>
 </div>
 <%= f.fields_for :question_content do |c| %>
 <div class="form-group">
