삭제함:        app/assets/javascripts/blogs/index.js 	삭제함:        app/assets/javascripts/galleries/index.js 	삭제함:        app/assets/javascripts/portfolios/index.js 	수정함:        app/controllers/galleries_controller.rb 	수정함:        app/uploaders/album_uploader.rb 	수정함:        app/uploaders/blog_comment_uploader.rb 	수정함:        app/uploaders/blog_uploader.rb 	수정함:        app/uploaders/ckeditor_attachment_file_uploader.rb 	수정함:        app/uploaders/ckeditor_picture_uploader.rb 	수정함:        app/uploaders/gallery_uploader.rb 	수정함:        app/uploaders/intro_photo_uploader.rb 	삭제함:        app/uploaders/portfolio_uploader.rb 	삭제함:        app/uploaders/resource_uploader.rb 	수정함:        app/uploaders/user_uploader.rb 	수정함:        app/views/galleries/_gallery.html.erb 	수정함:        app/views/galleries/_index.html.erb 	수정함:        app/views/galleries/index.html.erb 	수정함:        app/views/galleries/show.html.erb 	수정함:        app/views/layouts/_ad.html.erb 	수정함:        config/initializers/assets.rb

--- a/app/views/galleries/_index.html.erb
+++ b/app/views/galleries/_index.html.erb
@@ -2,11 +2,13 @@
 	<h3><%= t('activerecord.models.gallery') %></h3>
 
 	<% unless @galleries.empty? %>
+	<% if @galleries.count > 6 %>
 	<ol class="carousel-indicators">
 		<% @galleries.each_slice(6).each_with_index do |gallery,index| %>
 		<li data-target="#sl_main_gallery" data-slide-to="<%= index %>" <% if index.zero? %>class="active"<% end %>></li>
 		<% end %>
 	</ol>
+	<% end %>
 	<% end %>
 
 	<% unless @galleries.empty? %>
