--- a/app/views/galleries/index.html.erb
+++ b/app/views/galleries/index.html.erb
@@ -1,4 +1,4 @@
 <% breadcrumb :galleries %>
 <div id="sl_gallery_index" class="sl_gallery">
-	<%= render 'gallery' %>
+  <%= render 'gallery',gallery_categories: @gallery_categories,galleries: @galleries,gallery: @gallery,gallery_category_id: @gallery_category_id %>
 </div>
