--- a/app/views/galleries/_gallery.html.erb
+++ b/app/views/galleries/_gallery.html.erb
@@ -1,7 +1,7 @@
 <ol class="nav nav-tabs">
-	<% unless @gallery_categories.empty? %>
-	<% @gallery_categories.each do |gallery_category| %>
-	<li <% if gallery_category.id!=nil && (@gallery_category_id==gallery_category.id) %>class="active"<% end %>>
+	<% unless gallery_categories.empty? %>
+	<% gallery_categories.each do |gallery_category| %>
+	<li <% if gallery_category.id!=nil && (gallery_category_id==gallery_category.id) %>class="active"<% end %>>
 		<%= link_to galleries_path(:gallery_category_id=>gallery_category.id) do %>
 		<%= gallery_category.title %><span class="hidden-xs">(<%= gallery_category.galleries_count %>)</span>
 		<% end %>
@@ -13,40 +13,42 @@
 	</li>
 	<% end %>
 </ol>
-<div id="sl_gallery" class="row" <% if @gallery %>itemscope itemtype="http://schema.org/ImageObject"<% end %> >
-	<% if @gallery %>
+<div id="sl_gallery" class="row" <% if gallery %>itemscope itemtype="http://schema.org/ImageObject"<% end %> >
+	<% if gallery %>
 	<div id="sl_gallery_left" class="col-xs-12 col-md-6 col-xl-5">
-		<span class="none" itemprop="genre"><%= @gallery.gallery_category_id %></span>
-		<%=link_to @gallery.photo.to_s,{:title=>@gallery.title,:class=>'simple_image'} do %>
+		<span class="none" itemprop="genre"><%= gallery.gallery_category_id %></span>
+		<%=link_to gallery.photo.to_s,{:title=>gallery.title,:class=>'simple_image'} do %>
 		<figure>
-			<%= image_tag sl_get_thumb(@gallery.photo.to_s,'large'),:class=>'img-responsive',:itemprop=>"contentURL" %>
-			<figcaption id="gallery<%= @gallery.id %>_img<%= @gallery.id %>_span" class="image_caption" itemprop="name">
-				<%= @gallery.title %>
+			<%= image_tag sl_get_thumb(gallery.photo.to_s,'large'),:class=>'img-responsive',:itemprop=>"contentURL" %>
+			<figcaption id="gallery<%= gallery.id %>_img<%= gallery.id %>_span" class="image_caption" itemprop="name">
+				<%= gallery.title %>
 			</figcaption>
 		</figure>
 		<% end %>
 	</div>
 	<div id="sl_gallery_right" class="col-xs-12 col-md-6 col-xl-7">
 		<div itemprop="description">
-			<%= simple_format @gallery.content %>
+			<%= simple_format gallery.content %>
 		</div>
 		<div class="add_info">
-			<%= render :partial => 'users/data', :locals => { :user => @gallery.user, :itemprop => 'author' } %> / <span itemprop="dateCreated" datetime="<%= @gallery.created_at %>"><%= @gallery.created_at.to_date %></span><span class="none" itemprop="dateModified" datetime="<%= @gallery.updated_at %>"><%= @gallery.updated_at.to_date %></span>
+			<%= render :partial => 'users/data', :locals => { :user => gallery.user, :itemprop => 'author' } %> / <span itemprop="dateCreated" datetime="<%= gallery.created_at %>"><%= gallery.created_at.to_date %></span><span class="none" itemprop="dateModified" datetime="<%= gallery.updated_at %>"><%= gallery.updated_at.to_date %></span>
 		</div>
 		<% if can? :update, @manage %>
 		<div id="sl_gallery_menu">
-			<%= link_to t(:link_edit), edit_gallery_path(@gallery) %> &nbsp; | &nbsp; <%= link_to t(:link_delete), @gallery, method: :delete, data: { confirm: t(:delete_confirm)} %>
+			<%= link_to t(:link_edit), edit_gallery_path(gallery) %> &nbsp; | &nbsp; <%= link_to t(:link_delete), gallery, method: :delete, data: { confirm: t(:delete_confirm)} %>
 		</div>
 		<% end %>
 	</div>
 	<% end %>
 	<div id="sl_main_gallery" class="carousel slide">
 		<% unless @galleries.empty? %>
+		<% if galleries.count > 6 %>
 		<ol class="carousel-indicators">
 			<% @galleries.each_slice(6).each_with_index do |gallery,index| %>
 			<li data-target="#sl_main_gallery" data-slide-to="<%= index %>" <% if index.zero? %>class="active"<% end %>></li>
 			<% end %>
 		</ol>
+		<% end %>
 		<% end %>
 
 		<% unless @galleries.empty? %>
@@ -57,7 +59,7 @@
 				<% if(index2>=5) then g_class=' nm' else g_class='' end %>
 				<%= link_to image_tag(asset_path('ajax-loader.gif'),:alt=>gallery.title,:'data-original'=>sl_get_thumb(gallery.photo.to_s,'medium'),:class=>'lazy'),gallery_path(gallery),:class=>"col-md-2#{g_class}" %>
 				<noscript>
-					<%= link_to image_tag(sl_get_thumb(gallery.photo.to_s,'medium'),:alt=>gallery.title),gallery_path(gallery),:title=>gallery.title %><% if gallery.id==@gallery.id %><span class="none" itemprop="thumbnailUrl"><%= sl_get_thumb(gallery.photo.to_s,'small') %></span><% end %>
+					<%= link_to image_tag(sl_get_thumb(gallery.photo.to_s,'medium'),:alt=>gallery.title),gallery_path(gallery),:title=>gallery.title %><% if gallery.id==gallery.id %><span class="none" itemprop="thumbnailUrl"><%= sl_get_thumb(gallery.photo.to_s,'small') %></span><% end %>
 				</noscript>
 				<% end %>
 			</div>
@@ -72,7 +74,7 @@
 		<% end %>
 
 		<!-- Controls -->
-		<% if @galleries.count > 6 %>
+		<% if galleries.count > 6 %>
 		<a class="left carousel-control" href="#sl_main_gallery" role="button" data-slide="prev"> <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> <span class="sr-only">Previous</span> </a>
 		<a class="right carousel-control" href="#sl_main_gallery" role="button" data-slide="next"> <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span> <span class="sr-only">Next</span> </a>
 		<% end %>
@@ -80,8 +82,8 @@
 
 	<div class="col-xs-12">
 		<% if can? :create, Gallery %>
-		<%= link_to t(:link_new),new_gallery_path(:gallery_category_id=>@categoryId),:rel=>"nofollow",:class=>"btn btn-default" %>
+		<%= link_to t(:link_new),new_gallery_path(:gallery_category_id=>gallery_category_id),:rel=>"nofollow",:class=>"btn btn-default" %>
 		<% end %>
-		<%= paginate @galleries %>
+		<%= paginate galleries %>
 	</div>
 </div>
