--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -1,4 +1,4 @@
 <% breadcrumb :gallery, @gallery %>
 <div id="sl_gallery_show" class="sl_gallery">
-  <%= render 'gallery' %>
+  <%= render 'gallery',gallery_categories: @gallery_categories,galleries: @galleries,gallery: @gallery,gallery_category_id: @gallery_category_id %>
 </div>
