수정함:        app/controllers/histories_controller.rb 	수정함:        app/controllers/notices_controller.rb 	수정함:        app/controllers/portfolios_controller.rb 	수정함:        app/views/layouts/_footer.html.erb 	수정함:        app/views/notices/_index.html.erb 	수정함:        app/views/questions/_index.html.erb

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer id="footer" class="footer">
 			<address>CopyLeft. 2012, SL. All wrongs reserved.&nbsp;&nbsp; <br class="visible-xs" />주소 : 아프리카 사자굴 &nbsp;&nbsp;</address>
-			<%=form_tag root_path,:method=>'get' do %>
+			<!--<%=form_tag root_path,:method=>'get' do %>
 			<%=select_tag 'locale',options_for_select(@language,I18n.locale) %>
 			<%=submit_tag t(:change_language) %>
-			<% end %>
+			<% end %> -->
 </footer>
