--- a/app/views/notices/_index.html.erb
+++ b/app/views/notices/_index.html.erb
@@ -4,7 +4,7 @@
 		<% unless @notices.empty? %>
 		<% @notices.each do |notice| %>
 		<li>
-			<%= link_to notice.title.truncate(16), notice  %>
+			<%= link_to notice.title, notice  %>
 			<span class="sl_created_at"><%=notice.created_at.to_date %></span>
 		</li>
 		<% end %>
