--- a/app/views/questions/_index.html.erb
+++ b/app/views/questions/_index.html.erb
@@ -5,7 +5,7 @@
 		<% @questions.each do |question| %>
 		<li>
 			<span class="sl_name"><%=userName(question,7) %></span>
-			<%= link_to question.title.truncate(16), question  %>
+			<%= link_to question.title, question  %>
 		</li>
 		<% end %>
 		<% else %>
