수정함:        Gemfile.lock 	삭제함:        app/models/ad_position.rb 	수정함:        app/models/gallery.rb 	삭제함:        app/models/intro_like_n_hate.rb 	수정함:        app/views/galleries/_form.html.erb 	수정함:        app/views/guest_books/index.html.erb 	수정함:        app/views/notices/index.html.erb 	수정함:        app/views/notices/show.html.erb 	수정함:        app/views/questions/index.html.erb

--- a/app/views/notices/show.html.erb
+++ b/app/views/notices/show.html.erb
@@ -9,7 +9,8 @@
       <p><%=t(:label_name)%> : <span  itemprop="author"><%=userName(@notice,10) %></span>&nbsp;&nbsp;&nbsp; <%=t(:label_created_at)%> : <span itemprop="dateCreated"><%= @notice.created_at %></span><span class="none" itemprop="dateModified"><%= @notice.updated_at %></span></p>
     </div>
     <div class="sl_content_main">
-      <div class="sl_content_text" itemprop="text"><%= simple_format(@notice.notice_content.content) %></div>
+      <%=debug @notice %>
+      <div class="sl_content_text" itemprop="text"><%= simple_format(@notice.title) %></div>
     </div>
   </div>
   <div id="sl_content_bottom_menu">
