--- a/app/views/galleries/_form.html.erb
+++ b/app/views/galleries/_form.html.erb
@@ -24,6 +24,12 @@
 	</div>
 </div>
 <div class="form-group">
+	<%= f.label :tag_list, "Tags (separated by commas)" %>
+	<div>
+		<%= f.text_field :tag_list, :class=>'form-control' %>
+	</div>
+</div>
+<div class="form-group">
 	<%= f.label :photo,:class=>'col-sm-2 control-label' %>
 	<div class="col-sm-10">
 		<% if @gallery.photo? %>
