--- a/app/views/guest_books/index.html.erb
+++ b/app/views/guest_books/index.html.erb
@@ -3,11 +3,11 @@
 	<article class="table-responsive">
 		<table width="100%" cellpadding="0" cellspacing="0" class="table table-striped">
 			<colgroup>
-				<col width="130px" />
+				<col style="width:130px" />
 				<col />
-				<col width="70px" />
-				<col width="70px" />
-				<col width="130px" />
+				<col style="width:70px" />
+				<col style="width:70px" />
+				<col style="width:130px" />
 			</colgroup>
 			<thead>
 				<tr>
