--- a/app/views/notices/index.html.erb
+++ b/app/views/notices/index.html.erb
@@ -3,10 +3,10 @@
 	<article class="table-responsive">
 		<table width="100%" cellpadding="0" cellspacing="0" class="table table-striped">
 			<colgroup>
-				<col width="100px" />
+				<col style="width:100px" />
 				<col />
-				<col width="70px" />
-				<col width="130px" />
+				<col style="width:70px" />
+				<col style="width:130px" />
 			</colgroup>
 			<thead>
 				<tr>
@@ -33,7 +33,7 @@
 				<% end %>
 			</tbody>
 		</table>
-	</article>	
+	</article>
   <div id="sl_bottom_menu">
   <% if can? :create, Notice %>
     <%= link_to t(:link_new), new_notice_path,:rel=>"nofollow" %>
