--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
 	:description => @meta_description,
 	:keywords => @meta_keywords,
 	:separator => t(:title_separator),
-	:viewport => "width=device-width, initial-scale=1.0, user-scalable=no",
+	:viewport => 'width=device-width, initial-scale=1.0, user-scalable=no',
 	:reverse => true %>
 	<%=display_meta_tags og: {
   	title:   @title,
@@ -17,7 +17,6 @@
 	}
 	%>
 	<meta name="author" content="Sleeping-Lion">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" href="<%=asset_path 'favicon.ico' %>">
 	<%= stylesheet_link_tag "application", :media=>"all", "data-turbolinks-track" => true %>
 	<%= csrf_meta_tags %>
