삭제함:        app/assets/javascripts/home.js.coffee 	삭제함:        app/assets/stylesheets/admin/application.css.erb 	수정함:        app/controllers/admin/admin_controller.rb 	삭제함:        app/controllers/admin/home_controller.rb 	수정함:        app/controllers/admin/users_controller.rb 	수정함:        app/controllers/application_controller.rb 	수정함:        app/helpers/application_helper.rb 	삭제함:        app/views/layouts/admin/_aside.html.erb 	수정함:        app/views/layouts/admin/_footer.html.erb 	수정함:        app/views/layouts/admin/_header.html.erb 	수정함:        app/views/layouts/admin/application.html.erb 	수정함:        app/views/layouts/admin/login.html.erb 	삭제함:        app/views/layouts/admin/main.html.erb 	수정함:        config/locales/ko.yml 	수정함:        config/routes.rb

--- a/app/views/layouts/admin/_footer.html.erb
+++ b/app/views/layouts/admin/_footer.html.erb
@@ -1,3 +1,3 @@
-<footer id="footer">
-	
+<footer>
+	<address>&copy; <a href="http://geromics.com/" title="제로믹스" target="_blank">Geromics</a> 2017</address>
 </footer>
