--- a/app/views/layouts/admin/login.html.erb
+++ b/app/views/layouts/admin/login.html.erb
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
-<html lang="<?=$site['language'] ?>">
+<html lang="<%=I18n.locale %>">
 <head>
-	<title><?=$site['title'] ?> 관리자 | <?=$board['name'] ?>관리</title>
-	<meta charset="utf-8" />
-	<meta name="robots" content="noindex, nofollow">
-	<meta name="application-name" content="<?=$site['application-name'] ?>" />
-	<meta name="description" content="<?=$site['description'] ?>" />
-	<meta name="author" content="Sleeping-Lion" />
-	<link rel="shortcut icon" href="/images/favicon.ico" />
-	<link rel="stylesheet" type="text/css" href="/stylesheets/admin/login.css" media="all" />
+	<meta charset="utf-8">
+	<title><%=t(:application_name)%> <%=t(:login_page) %></title>
+	<meta name="description" content="<%=t(:application_name)%> Admin System Login">
+	<meta name="author" content="Sleeping-Lion">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="shortcut icon" href="<%=asset_path 'favicon.ico' %>">
+	<%= stylesheet_link_tag "admin/application", :media => "all" %>
+	<%= csrf_meta_tags %>
+	<style type="text/css">
+		body { background: url('<%=asset_path 'bg-login.jpg' %>') !important; }
+	</style>
+	<!--[if IE]>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+	<![endif]-->
 </head>
 <body>
-<!--[if lt IE 7]>
-<div style="clear:both;text-align:center;position:relative">
-	<a href="http://www.microsoft.com/windows/internet-explorer/default.aspx?ocid=ie6_countdown_bannercode"><img src="http://www.theie6countdown.com/images/upgrade.jpg" border="0"  alt="" /></a>
-</div>
-<![endif]-->
-<!--[if lt IE 9]>
-<script type="text/javascript" src="/javascripts/html5.js"></script>
-<link href="/stylesheets/ie.css" media="all" rel="stylesheet" type="text/css" />
-<![endif]-->	
-<?php require_once $template['main']; ?>
-<script type="text/javascript" src="/javascripts/jquery-1.7.min.js"></script>
-<script type="text/javascript" src="/javascripts/account/sha1.js"></script>
-<script type="text/javascript" src="/javascripts/admin/login/index.js"></script>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="login-box">
+				<h2><%=t(:service_name) %> <%=t(:login_title) %></h2>
+				<%= yield %>
+			</div>
+		</div>
+	</div>
+	<%= javascript_include_tag @script %>
+	<%= javascript_include_tag asset_path 'admins/login.js', "data-turbolinks-track" => true  %>
 </body>
 </html>
