수정함:        app/assets/stylesheets/application.scss 	수정함:        app/views/users/_index.html.erb

--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -1,8 +1,8 @@
 <article>
 	<% unless @users.empty? %>
-	<dl class="dl-horizontal">
+	<dl class="dl-horizontal" itemscope itemtype="http://schema.org/Person">
 		<% @users.each do |user| %>
-		<dt><%=user.name %> </dt>
+		<dt itemprop="name"><%=user.name %> </dt>
 		<dd><%=user.description %></dd>
 		<% end %>
 	</dl>
