수정함:        app/assets/javascripts/application.js 	수정함:        app/assets/javascripts/home.js 	수정함:        app/controllers/home_controller.rb 	수정함:        app/views/blogs/_tag_cloud.html.erb 	수정함:        app/views/layouts/application.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,6 +51,6 @@
 	</div>
 	<%= render :partial => 'layouts/footer' %>
 	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
-	<%= javascript_include_tag @script, "data-turbolinks-track" => true %>
+	<%= javascript_include_tag :application, "data-turbolinks-track" => true %>
 </body>
 </html>
