수정함:        app/controllers/admin/blog_categories_controller.rb 	수정함:        app/controllers/admin/blogs_controller.rb 	수정함:        app/controllers/admin/gallery_categories_controller.rb 	수정함:        app/controllers/admin/guest_books_controller.rb 	수정함:        app/helpers/application_helper.rb 	수정함:        app/views/admin/blogs/index.html.erb 	수정함:        app/views/admin/galleries/index.html.erb 	수정함:        app/views/admin/guest_books/index.html.erb 	수정함:        app/views/admin/notices/index.html.erb 	수정함:        app/views/admin/questions/index.html.erb 	수정함:        app/views/admin/users/index.html.erb 	수정함:        app/views/layouts/admin/_menu.html.erb 	수정함:        config/locales/ko.yml 	수정함:        config/routes.rb

--- a/app/views/admin/blogs/index.html.erb
+++ b/app/views/admin/blogs/index.html.erb
@@ -1,43 +1,52 @@
-<section id="admin_blog_index" class="table-responsive">
-  <table width="100%" cellpadding="0" cellspacing="0" class="table table-striped table-hover">
+<div class="row">
+	<h3 class="col-xs-12 col-sm-6"><%= @controller_name %> <%= actionNameChange controller.action_name %></h3>
+	<div class="col-xs-12 col-sm-6">
+
+	</div>
+</div>
+<div class="table-responsive">
+  <table width="100%" cellpadding="0" cellspacing="0" class="table table-bordered table-striped">
     <colgroup>
-      <col width="100px" />
+      <col style="width:100px" />
+      <col style="width:130px" />
       <col />
-      <col width="40px" />
-      <col width="70px" />
-      <col width="130px" />
+      <col />
+      <col style="width:130px" />
+      <col style="width:130px" />
       <% if can?(:update, Blog) || can?(:delete, Blog) %>
       <col <%=raw manage_width(Blog) %> />
       <% end %>
     </colgroup>
     <thead>
       <tr>
-        <th><p class="sl_name">이름</p></th>
-        <th><p class="sl_title">제목</p></th>
-        <th><p class="sl_comment">댓글</p></th>
-        <th><p class="sl_count">조회</p></th>
-        <th><p class="sl_created_at">등록일</p></th>
-        <th><p class="sl_manage"><%=t(:label_manage) %></p></th>
+        <th><%= t(:label_number) %></th>
+        <th><%=t(:photo,scope:[:activerecord,:attributes,:blog]) %></th>
+        <th><%=t(:blog_category_id,scope:[:activerecord,:attributes,:blog]) %></th>
+        <th><%=t(:title,scope:[:activerecord,:attributes,:blog]) %></th>
+        <th><%=t(:count,scope:[:activerecord,:attributes,:blog]) %></th>
+        <th><%=t(:comment_counts,scope:[:activerecord,:attributes,:blog]) %></th>
+        <th><%=t(:label_manage) %></th>
       </tr>
     </thead>
     <tbody>
       <% unless @admin_blogs.empty? %>
       <% @admin_blogs.each do |admin_blog| %>
       <tr>
+        <td><%=admin_blog.id %></td>
         <td><%=image_tag admin_blog.photo.small_thumb %></td>
-        <td><p><%= link_to admin_blog.title, admin_blog_path(admin_blog)  %></p></td>
-        <td class="sl_right"><p class="sl_count"></p></td>
-        <td class="sl_right"><p class="sl_count"><%=admin_blog.count+admin_blog.impressionist_count(:filter=>:ip_address) %></p></td>
-        <td class="sl_right"><p class="sl_registered_date"><%=admin_blog.created_at.to_date %></p></td>
+        <td><%=link_to admin_blog.blog_category.title,admin_blog_category_path(admin_blog.blog_category_id) %></td>
+        <td><%=link_to admin_blog.title,admin_blog_path(admin_blog) %></td>
+        <td><%=admin_blog.count+admin_blog.impressionist_count(:filter=>:ip_address) %></td>
+        <td><%=admin_blog.blog_comments_count %></td>
         <% if can?(:update, admin_blog) || can?(:delete, admin_blog) %>
         <td>
           <% if can? :update, admin_blog %>
-          <%= link_to edit_admin_blog_path(admin_blog),:class=>"btn btn-default btn-sm" do %>
+          <%= link_to edit_admin_blog_path(admin_blog),:class=>"btn btn-default" do %>
           <i class="glyphicon glyphicon-pencil"></i> <%=t(:link_edit) %>
           <% end %>
           <% end %>
           <% if can? :delete, admin_blog %>
-          <%= link_to admin_blog_path(admin_blog), :method => :delete, :data => { :confirm => t(:delete_confirm) },:class=>"btn btn-sm btn-danger pull-right" do %>
+          <%= link_to admin_blog_path(admin_blog), :method => :delete, :data => { :confirm => t(:delete_confirm) },:class=>"btn btn-danger pull-right" do %>
           <i class="glyphicon glyphicon-trash"></i> <%=t(:link_delete) %>
           <% end %>
           <% end %>
@@ -52,10 +61,14 @@
       <% end %>
     </tbody>
   </table>
-  <div id="sl_bottom_menu">
-    <% if can? :create,Blog %>
-    <%= link_to t(:link_new), new_admin_blog_path %>
+</div>
+<div class="row">
+  <div class="col-xs-6 col-sm-3 col-md-2">
+    <% if can? :create, Blog %>
+    <%= link_to new_admin_blog_path,:class=>"btn btn-primary" do %>
+    <i class="glyphicon glyphicon-plus"></i> <%= t(:link_new) %>
     <% end %>
-    <%= paginate @admin_blogs %>
+    <% end %>
   </div>
-</section>
+  <%= paginate @admin_blogs %>
+</div>
