--- a/app/views/admin/notices/index.html.erb
+++ b/app/views/admin/notices/index.html.erb
@@ -1,23 +1,29 @@
-<section id="admin_notice_index" class="table-responsive">
-  <table width="100%" cellpadding="0" cellspacing="0" class="table table-striped table-hover">
-    <colgroup>
-      <col width="100px" />
+<div class="row">
+	<h3 class="col-xs-12 col-sm-6"><%= @controller_name %> <%= actionNameChange controller.action_name %></h3>
+	<div class="col-xs-12 col-sm-6">
+
+	</div>
+</div>
+<div class="table-responsive">
+  <table width="100%" cellpadding="0" cellspacing="0" class="table table-bordered table-striped">
+		<colgroup>
+      <col style="width:100px" />
       <col />
-      <col width="40px" />
-      <col width="70px" />
-      <col width="130px" />
+      <col style="width:40px" />
+      <col style="width:70px" />
+      <col style="width:130px" />
       <% if can?(:update, Notice) || can?(:delete, Notice) %>
       <col <%=raw manage_width(Notice) %> />
       <% end %>
     </colgroup>
     <thead>
       <tr>
-        <th><p class="sl_name">이름</p></th>
-        <th><p class="sl_title">제목</p></th>
-        <th><p class="sl_comment">댓글</p></th>
-        <th><p class="sl_count">조회</p></th>
-        <th><p class="sl_created_at">등록일</p></th>
-        <th><p class="sl_manage"><%=t(:label_manage) %></p></th>
+        <th>이름</th>
+        <th>제목</th>
+        <th>댓글</th>
+        <th>조회</th>
+        <th>등록일</th>
+        <th><%=t(:label_manage) %></th>
       </tr>
     </thead>
     <tbody>
@@ -52,10 +58,14 @@
       <% end %>
     </tbody>
   </table>
-  <div id="sl_bottom_menu">
-    <% if can? :create,Notice %>
-    <%= link_to t(:link_new), new_admin_notice_path %>
-    <% end %>
-    <%= paginate @admin_notices %>
-  </div>
-</section>
+</div>
+<div class="row">
+	<div class="col-xs-6 col-sm-3 col-md2">
+		<% if can? :create, Notice %>
+		<%= link_to new_admin_notice_path,:class=>"btn btn-primary" do %>
+		<i class="glyphicon glyphicon-plus"></i> <%= t(:link_new) %>
+		<% end %>
+		<% end %>
+	</div>
+	<%= paginate @admin_notices %>
+</div>
