--- a/app/views/layouts/admin/_menu.html.erb
+++ b/app/views/layouts/admin/_menu.html.erb
@@ -3,7 +3,7 @@
 	<li class="dropdown">
 		<a class="dropdown-toggle dropmenu<% if params[:controller]=='admin/operators' || params[:controller]=='admin/users' || params[:controller]=='admin/groups' || params[:controller]=='admin/kits' %> active<% end %>" data-toggle="dropdown" href="#">
 			<i class="glyphicon glyphicon-user glyphicon-white"></i>
-			<%=t(:menu_user)%>
+			<%=t(:menu_user,scope:[:admin_menu]) %>
 			<span class="caret"></span>
 		</a>
 		<ul	class="dropdown-menu<% if params[:controller]=='admin/operators' || params[:controller]=='admin/users' || params[:controller]=='admin/groups' || params[:controller]=='admin/kits' %> current<% end %>">
