--- a/app/views/admin/galleries/index.html.erb
+++ b/app/views/admin/galleries/index.html.erb
@@ -1,30 +1,30 @@
-<section id="sl_notice_index" class="table-responsive"> 
-  <table width="100%" cellpadding="0" cellspacing="0" class="table table-striped table-hover">
+<div class="row">
+	<h3 class="col-xs-12 col-sm-6"><%= @controller_name %> <%= actionNameChange controller.action_name %></h3>
+	<div class="col-xs-12 col-sm-6">
+
+	</div>
+</div>
+<div class="table-responsive">
+  <table width="100%" cellpadding="0" cellspacing="0" class="table table-bordered table-striped">
 		<colgroup>
-			<col width="100px" />
+			<col style="width:100px" />
 			<col />
-			<col width="70px" />
-			<col width="130px" />
+			<col style="width:70px" />
+			<col style="width:130px" />
     <% if can?(:update, Gallery) || can?(:delete, Gallery) %>
     <col <%=raw manage_width(Gallery) %> />
-    <% end %>			
+    <% end %>
 		</colgroup>
 		<thead>
 			<tr>
-				<th><p class="sl_name"><%=t(:label_photo) %></p></th>
-				<th><p class="sl_title"><%=t(:label_title) %></p></th>
-				<th class="sl_right"><p class="sl_count">조회</p></th>
-				<th class="sl_right"><p class="sl_registered_date">등록일</p></th>
-   <th class="sl_right"><p class="sl_manage"><%=t(:label_manage) %></p></th>				
+				<th><%=t(:label_photo) %></th>
+				<th><%=t(:label_title) %></th>
+				<th>조회</th>
+				<th>등록일</th>
+        <th><%=t(:label_manage) %></th>
 			</tr>
 		</thead>
 		<tbody>
-			<tr class="none">
-				<td><p class="sl_name"></p></td>
-				<td><p><a class="sl_show_link" href="show.php"></a></p></td>
-				<td class="sl_right"><p class="sl_count"></p></td>
-				<td class="sl_right"><p class="sl_registered_date"></p></td>
-			</tr>
 			<% unless @admin_galleries.empty? %>
 			<% @admin_galleries.each do |admin_gallery| %>
 			<tr>
@@ -47,17 +47,21 @@
       </td>
       <% end %>
 			</tr>
-			<% end %>			
+			<% end %>
 			<% else %>
 			<tr>
         <td colspan="5"><p><%=t(:no_data) %></p></td>
 			</tr>
 			<% end %>
 		</table>
-		<div id="sl_bottom_menu">
-		<% if can? :create,Gallery %>
-	<%= link_to '글쓰기', new_admin_gallery_path %>
-	<% end %>
-				<%= paginate @admin_galleries %>
-	</div>
-</section>
+</div>
+<div class="row">
+  <div class="col-xs-6 col-sm-3 col-md2">
+    <% if can? :create, Gallery %>
+    <%= link_to new_admin_blog_category_path,:class=>"btn btn-primary" do %>
+    <i class="glyphicon glyphicon-plus"></i> <%= t(:link_new) %>
+    <% end %>
+    <% end %>
+  </div>
+  <%= paginate @admin_galleries %>
+</div>
