--- a/app/views/admin/guest_books/index.html.erb
+++ b/app/views/admin/guest_books/index.html.erb
@@ -1,22 +1,28 @@
-<section id="sl_admin_guest_book_index" class="table-responsive">
-  <table width="100%" cellpadding="0" cellspacing="0" class="table table-striped table-hover">
+<div class="row">
+	<h3 class="col-xs-12 col-sm-6"><%= @controller_name %> <%= actionNameChange controller.action_name %></h3>
+	<div class="col-xs-12 col-sm-6">
+
+	</div>
+</div>
+<div class="table-responsive">
+  <table width="100%" cellpadding="0" cellspacing="0" class="table table-bordered table-striped">
     <colgroup>
-      <col width="100px" />
+      <col style="width:100px" />
       <col />
-      <col width="40px" />
-      <col width="70px" />
-      <col width="130px" />
+      <col style="width:40px" />
+      <col style="width:70px" />
+      <col style="width:130px" />
       <% if can?(:update, GuestBook) || can?(:delete, GuestBook) %>
       <col <%=raw manage_width(GuestBook) %> />
       <% end %>
     </colgroup>
     <thead>
       <tr>
-        <th><p class="sl_name">이름</p></th>
-        <th><p class="sl_title">제목</p></th>
-        <th><p class="sl_comment">댓글</p></th>
-        <th><p class="sl_count">조회</p></th>
-        <th><p class="sl_created_at">등록일</p></th>
+        <th></th>
+        <th></th>
+        <th></th>
+        <th></th>
+        <th></th>
         <th><p class="sl_manage"><%=t(:label_manage) %></p></th>
       </tr>
     </thead>
@@ -52,10 +58,14 @@
       <% end %>
     </tbody>
   </table>
-  <div id="sl_bottom_menu">
-    <% if can? :create,GuestBook %>
-    <%= link_to t(:link_new), new_admin_guest_book_path %>
-    <% end %>
-    <%= paginate @admin_guest_books %>
-  </div>
-</section>
+</div>
+<div class="row">
+	<div class="col-xs-6 col-sm-3 col-md2">
+		<% if can? :create, GuestBook %>
+		<%= link_to new_admin_guest_book_path,:class=>"btn btn-primary" do %>
+		<i class="glyphicon glyphicon-plus"></i> <%= t(:link_new) %>
+		<% end %>
+		<% end %>
+	</div>
+	<%= paginate @admin_guest_books %>
+</div>
