--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,5 +1,11 @@
-<section id="admin_question_index" class="table-responsive">
-<table width="100%" cellpadding="0" cellspacing="0" class="table table-striped table-hover">
+<div class="row">
+	<h3 class="col-xs-12 col-sm-6"><%= @controller_name %> <%= actionNameChange controller.action_name %></h3>
+	<div class="col-xs-12 col-sm-6">
+
+	</div>
+</div>
+<div class="table-responsive">
+  <table width="100%" cellpadding="0" cellspacing="0" class="table table-bordered table-striped">
 	<colgroup>
 		<col width="100px" />
 		<col />
@@ -29,19 +35,21 @@
 				<td class="sl_right"><p class="sl_count"><%= user.impressionist_count(:filter=>:ip_address) %></p></td>
 				<td class="sl_right"><p class="sl_registered_date"><%=user.created_at.to_date %></p></td>
 			</tr>
-			<% end %>			
+			<% end %>
 			<% else %>
 			<tr>
 				<td colspan="4"><p>글이 없습니다.</p></td>
 			</tr>
 			<% end %>
-</table>
-<div id="sl_bottom_menu">
-	<% if user_signed_in? %>
-	<% if current_user.admin? %>			
-		<%= link_to '글쓰기', new_admin_user_path %>
-	<% end %>
-	<% end %>
-	<%= paginate @admin_users %>
-</div>
-</section>
+		</table>
+	</div>
+	<div class="row">
+	  <div class="col-xs-6 col-sm-3 col-md2">
+	    <% if can? :create, User %>
+	    <%= link_to new_admin_user_path,:class=>"btn btn-primary" do %>
+	    <i class="glyphicon glyphicon-plus"></i> <%= t(:link_new) %>
+	    <% end %>
+	    <% end %>
+	  </div>
+	  <%= paginate @admin_users %>
+	</div>
